--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,6 +103,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .main_content {
@@ -176,9 +177,11 @@ body {
     max-width: 100%;
     overflow: hidden;
 }
+.img_element .wrapper video,
 .img_element .wrapper img {
     border-radius: 4px;
     overflow: hidden;
+    cursor: pointer;
 }
 .footer {
     display: flex;
@@ -306,4 +309,18 @@ form .field_line .checkbox label {
 }
 ::-webkit-calendar-picker-indicator {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="%23bbbbbb" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>');
+}
+@media screen and (max-width: 870px) {
+    .preview {
+        width: 100%;
+    }
+    form {
+        max-height: inherit;
+        width: 100%;
+        height: auto;
+        overflow: hidden
+    }
+    body {
+        flex-direction: column;
+    }
 }
