--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -328,3 +328,100 @@ input[type="checkbox"] {
     width: auto;
 }
 
+.export {
+    display: flex;
+    flex-direction: column;
+}
+
+.export_inline {
+    display: flex;
+    color: #fff;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+    margin-top: 10px;
+}
+.select {
+    position: relative;
+    background-color: #202225;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 3px;
+    font-size: 13px;
+    cursor: pointer;
+}
+.select .view {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    padding: 8px 10px;
+    display: flex;
+}
+.select .view > span {
+    width: 100%;
+}
+.select .view .arrow {
+    position: relative;
+    display: block;
+    height: 1rem;
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0.7);
+}
+.select .view .arrow span {
+    position: absolute;
+    display: block;
+    background-color: #949aa4;
+    height: 2px;
+    width: 0.8rem;
+    
+}
+.select .view .arrow span:nth-child(1) {
+    transform: translateX(3.5px) rotateZ(-45deg);
+    border-radius: 0 5px 5px 0;
+}
+.select .view .arrow span:nth-child(2) {
+    transform: translateX(-3.5px) rotateZ(45deg);
+    border-radius: 5px 0 0 5px;
+}
+.select:not(.open) .categories {
+    display: none;
+}
+.select .categories {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    top: 100%;
+    width: 100%;
+    
+}
+
+.select .categories .cat {
+    background: #202225;
+    padding: 8px 10px;
+}
+.select .categories .cat:hover {
+    background-color: #72767d;
+}
+.select .disabled {
+    color: #949aa4;
+}
+
+.select.open .view .arrow {
+    transform: rotateZ(180deg) scale(0.7);
+}
+#out {
+    background-color: #202225;
+    overflow-x: auto;
+    overflow-y: 0;
+    width: 100%;
+    height: 2rem;
+    border-radius: 3px;
+    margin-top: 15px;
+    padding: 8px 10px;
+    color: #fff;
+    user-select: all;
+}
