Fix out section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -420,10 +420,11 @@ input[type="checkbox"] {
     overflow-x: auto;
     overflow-y: 0;
     width: 100%;
-    height: 2rem;
+    height: 300px;
     border-radius: 3px;
     margin-top: 15px;
     padding: 8px 10px;
     color: #fff;
+    font-family: monospace;
     user-select: all;
 }
