--- a/src/css/components/embed.scss
+++ b/src/css/components/embed.scss
@@ -125,7 +125,7 @@
             max-width: 100%;
             overflow: hidden;
 
-            video, img {
+            img {
                 border-radius: 4px;
                 overflow: hidden;
                 cursor: pointer;
