--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="preview">
-        {% include 'sections/preview.html' %}
+        {% include 'preview.njk' %}
     </div>
     <form onsubmit="return false" id="embed_form">
-        {% include 'sections/form.html' %}
+        {% include 'form.njk' %}
     </form>
     <script src="dist/js/app.js"></script>
 </body>
