--- a/src/html/preview.njk
+++ b/src/html/preview.njk
@@ -1,7 +1,7 @@
 <div class="message">
     <div class="user_profile">
         <div class="inner">
-            <img src="resources/images/avatar.png" alt="Photo de profil du bot">
+            <img src="resources/images/avatar.png" alt="Bot profile picture">
         </div>
     </div>
     <div class="user_infos">
