--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -13,7 +13,7 @@
 {{ form.text("title", "Title", "Some title") }}
 {{ form.text("description", "Description", "Some description here") }}
 {{ form.text("url", "Title Url", "https://my-super-website.com/") }}
-{{ form.text("url", "Thumbnail url", "https://my-super-website/thumbnail.png") }}
+{{ form.text("thumbnail_url", "Thumbnail url", "https://my-super-website/thumbnail.png") }}
 
 {{ form.sep }}
 
