--- a/src/js/templates/preview.njk
+++ b/src/js/templates/preview.njk
@@ -1,4 +1,4 @@
-<div class="colored_line" id="preview_color"></div>
+<div class="colored_line" id="preview_color" style="background-color: {{ color }}"></div>
 <div class="inner">
     {% if thumbnail.url %}
     <div class="thumbnail">
