--- a/src/js/templates/export/javascript.njk
+++ b/src/js/templates/export/javascript.njk
@@ -12,7 +12,7 @@
 {%- endmacro -%}
 
 const embed = new EmbedBuilder()
-{##}
+{% filter section %}
 
     {%- if color %}
     .setColor("{{ color }}")
@@ -64,3 +64,5 @@ const embed = new EmbedBuilder()
         {% endfor %}
     )
     {% endif %}
+
+{% endfilter %}
