Use datetime timestamp input

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -31,7 +31,7 @@
 {{ form.text("footer_text", "Footer text", "Some footer text here") }}
 
 <div class="timestamp">
-    {{ form.date("timestamp") }}
+    {{ form.datetime("timestamp") }}
     <div class="checkbox">
         {{ form.checkbox("timestamp_auto") }}
         <label>Auto</label>
