Add timestamp label

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -30,6 +30,7 @@
 {{ form.text("footer_icon_url", "Footer icon url", "https://my-super-website/footer-icon.png") }}
 {{ form.text("footer_text", "Footer text", "Some footer text here") }}
 
+<label for="input_timestamp">Timestamp</label>
 <div class="timestamp">
     {{ form.datetime("timestamp") }}
     <div class="checkbox">
