Revert "Use datetime timestamp input"
This reverts commit 78c0ae4a54e11c968674863b047c697a23658309.

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -32,7 +32,7 @@
 
 <label for="input_timestamp">Timestamp</label>
 <div class="timestamp">
-    {{ form.datetime("timestamp") }}
+    {{ form.date("timestamp") }}
     <div class="checkbox">
         {{ form.checkbox("timestamp_auto") }}
         <label>Auto</label>
