--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -51,6 +51,10 @@ form {
         border-radius: 5px;
     }
 
+    #fields_wrapper {
+        margin-bottom: 10px;
+    }
+
     .field_line {
         display: flex;
         gap: 20px;
