--- a/src/css/components/embed.scss
+++ b/src/css/components/embed.scss
@@ -92,7 +92,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        margin-bottom: 10px;
+        /*margin-bottom: 10px;*/
     }
 
     .field_zone {
