--- a/src/css/components/select.scss
+++ b/src/css/components/select.scss
@@ -7,7 +7,9 @@
     border-radius: 3px;
     font-size: 13px;
     cursor: pointer;
-
+    * {
+        text-transform: capitalize;
+    }
     .view {
         position: relative;
         height: 100%;
