--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -11,7 +11,7 @@
 
 {{ form.input("color", "color", "Color") }}
 {{ form.input("text", "title", "Title", "Some title") }}
-{{ form.input("text", "description", "Description", "Some description here") }}
+{{ form.textarea("description", "Description", "Some description here") }}
 {{ form.input("text", "url", "Title Url", "https://my-super-website.com/") }}
 {{ form.input("text", "thumbnail_url", "Thumbnail url", "https://my-super-website/thumbnail.png") }}
 
