--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -20,6 +20,7 @@ form {
         resize: vertical; 
     }
     input,textarea {
+        font-size: 13px;
         position: relative;
         display: block;
         padding: 8px 10px;
