--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -7,6 +7,7 @@
     <title>Embed generator</title>
     <link rel="shortcut icon" href="resources/images/avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="dist/js/app.css">
 </head>
 <body>
     <div class="preview">
