--- a/src/css/components/embed.scss
+++ b/src/css/components/embed.scss
@@ -91,6 +91,11 @@
     .description {
         font-size: 13px;
     }
+    code {
+        background-color: rgb(32, 34, 37);
+        border-radius: 4px;
+        padding: 10px 15px;
+    }
 
     #fields {
         display: flex;
@@ -116,7 +121,8 @@
         gap: 5px;
 
         &_name {
-            color: #72767d;
+            font-weight: 700;
+            font-size: 15px;
         }
 
         &_value {
