--- a/src/css/components/embed.scss
+++ b/src/css/components/embed.scss
@@ -95,6 +95,7 @@
         background-color: rgb(32, 34, 37);
         border-radius: 4px;
         padding: 10px 15px;
+        font-family: monospace;
     }
 
     #fields {
