--- a/src/html/preview.njk
+++ b/src/html/preview.njk
@@ -1,20 +1,23 @@
-<div class="message">
-    <div class="user_profile">
-        <div class="inner">
-            <img src="resources/images/avatar.png" alt="Bot profile picture">
+
+<div class="preview">
+    <div class="message">
+        <div class="user_profile">
+            <div class="inner">
+                <img src="resources/images/avatar.png" alt="Bot profile picture">
+            </div>
         </div>
-    </div>
-    <div class="user_infos">
-        <div class="fixed_infos">
-            <div class="user_name">Générateur d'embed</div>
-            <div class="user_tag"><span>bot</span></div>
+        <div class="user_infos">
+            <div class="fixed_infos">
+                <div class="user_name">Générateur d'embed</div>
+                <div class="user_tag"><span>bot</span></div>
+            </div>
+            <div class="timestamp_infos">
+                Aujourd'hui à 20:15
+            </div>
         </div>
-        <div class="timestamp_infos">
-            Aujourd'hui à 20:15
+        <div class="embed" id="preview">
+            <div class="colored_line" id="preview_color"></div>
+            <div class="inner"></div>
         </div>
-    </div>
-    <div class="embed" id="preview">
-        <div class="colored_line" id="preview_color"></div>
-        <div class="inner"></div>
     </div>
 </div>
