Disable browser form autocomplete

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -1,6 +1,6 @@
 {% import 'include/form.njk' as form %}
 
-<form onsubmit="return false" id="embed_form">
+<form id="embed_form" onsubmit="return false" autocomplete="off">
     <h1>Setup your custom embed.</h1>
     <p>Customize your embed from A to Z and export it in the language you want!</p>
 
