--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -13,9 +13,12 @@ form {
 
     p {
         color: #72767d;
+        margin-bottom: 10px;
+    }
+    #tooltip {
+        color: #72767d;
         margin-bottom: 50px;
     }
-
     textarea {
         resize: vertical; 
     }
