Form & select refactor

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -20,7 +20,7 @@
 
     <label>Fields</label>
     <div id="fields_wrapper"></div>
-    <button class="btn green" onclick="addField()">Add field</button>
+    <button class="btn green" id="form_add_field">Add field</button>
 
     {{ form.sep }}
 
