Add template properties

--- a/src/js/templates/export/javascript.njk
+++ b/src/js/templates/export/javascript.njk
@@ -1,3 +1,8 @@
+---
+lang: JavaScript
+lib: discord.js
+---
+
 {%- macro fun(func, parameter) -%}
 {%- if parameter %}
     {{ func }}({{ parameter }})
