--- a/src/js/templates/export/python.njk
+++ b/src/js/templates/export/python.njk
@@ -1,3 +1,8 @@
+---
+lang: Python
+lib: discord.py
+---
+
 {%- macro params(params, del=", ") -%}
     {%- set params = params | selectattr("value") -%}
     {%- for param in params -%}
