Export syntax highlighting

--- a/src/html/form.njk
+++ b/src/html/form.njk
@@ -48,6 +48,8 @@
             <select id="export_select" style="display: none;"></select>
             <button class="btn green" onclick="exp()">Export</button>
         </div>
-        <pre id="out"></pre>
+        <pre>
+            <code id="out"></code>
+        </pre>
     </div>
 </form>
