--- a/src/js/templates/export/javascript.njk
+++ b/src/js/templates/export/javascript.njk
@@ -40,7 +40,7 @@ const embed = new EmbedBuilder()
     {% endif %}
 
     {%- if description %}
-    .setDescription("{{ description }}")
+    .setDescription("{{ description | nl2n }}")
     {% endif %}
 
     {%- if thumbnail.url %}
