--- a/src/js/templates/export/rust.njk
+++ b/src/js/templates/export/rust.njk
@@ -11,7 +11,7 @@ lib: serenity
     {% endif %}
 
     {%- if description %}
-    .description("{{ description }}")
+    .description("{{ description | nl2n }}")
     {% endif %}
 
     {%- if image.url %}
