--- a/src/js/templates/export/rust.njk
+++ b/src/js/templates/export/rust.njk
@@ -4,53 +4,37 @@ lib: serenity
 ---
 
 .embed(|e| e
-{% filter section %}
-
-    {%- if title %}
+    {% if title %}
     .title("{{ title }}")
     {% endif %}
-
-    {%- if description %}
+    {% if description %}
     .description("{{ description | nl2n }}")
     {% endif %}
-
-    {%- if image.url %}
+    {% if image.url %}
     .image("{{ image.url }}")
     {% endif %}
-
-    {%- if color %}
+    {% if color %}
     .colour("{{ color }}")
     {% endif %}
-
-    {%- if thumbnail.url %}
+    {% if thumbnail.url %}
     .thumbnail("{{ thumbnail.url }}")
     {% endif %}
-
-    {%- for field in fields %}
-    {%- if field.name or field.value %}
+    {% for field in fields %}
+    {% if field.name or field.value %}
     .field("{{ field.name }}", "{{ field.value }}", {{ 'true' if field.inline else 'false' }})
     {% endif %}
     {% endfor %}
-
-    {%- if author.name or author.icon_url %}
+    {% if author.name or author.icon_url %}
     .author(|a| a
-    {% filter section %}
-
-        {%- if author.icon_url %}
+        {% if author.icon_url %}
         .icon_url("{{ author.icon_url }}")
         {% endif %}
-
-        {%- if author.name %}
+        {% if author.name %}
         .name("{{ author.name }}")
         {% endif %}
-
-        {%- if author.url %}
+        {% if author.url %}
         .url("{{ author.url }}")
         {% endif %}
-
-    {%- endfilter %}
     )
     {% endif %}
-
-{%- endfilter %}
 )
