--- a/src/js/templates/export/python.njk
+++ b/src/js/templates/export/python.njk
@@ -10,12 +10,6 @@ lib: discord.py
     {%- endfor -%}
 {%- endmacro -%}
 
-{%- macro fun(func, parameters) -%}
-{%- if parameters | selectattr("value") | length %}
-embed.{{ func }}({{ params(parameters) }})
-{% endif -%}
-{%- endmacro -%}
-
 embed = discord.Embed(
     {{ params(
         [
@@ -26,35 +20,37 @@ embed = discord.Embed(
         ], ", \n    "
     ) }}
 )
-{% filter section %}
-
-    {{- fun("setAuthor", [
-        { name: "name", value: author.name },
-        { name: "url", value: author.url },
-        { name: "icon_url", value: author.icon_url }
-    ]) }}
-    
-    {{- fun("setFooter", [
-        { name: "text", value: footer.text },
-        { name: "icon_url", value: footer.icon_url }
-    ]) }}
-
-    {{- fun("setImage", [
-        { name: "url", value: image.url }
-    ]) }}
-
-    {{- fun("setThumbnail", [
-        { name: "url", value: thumbnail.url }
-    ]) }}
-
-    {%- for field in fields -%}
-        {%- if field.name or field.value %}
-            {{- fun("addField", [
-                { name: "name", value: field.name },
-                { name: "value", value: field.value },
-                { name: "inline", value: "True" if field.inline else "False", no_quotes: true }
-            ]) }}
-        {%- endif -%}
-    {%- endfor %}
-
-{% endfilter %}
+    {% if author.name or author.icon_url %}
+    .set_author({{ params(
+            [
+                { name: "name", value: author.name },
+                { name: "url", value: author.url },
+                { name: "icon_url", value: author.icon_url }
+            ], ", "
+        ) }})
+    {% endif %}
+    {% if footer.text or footer.icon_url %}
+    .set_footer({{ params(
+        [
+            { name: "text", value: footer.text },
+            { name: "icon_url", value: footer.icon_url }
+        ]
+    ) }})
+    {% endif %}
+    {% if image.url %}
+    .set_image(url="{{ image.url }}")
+    {% endif %}
+    {% if thumbnail.url %}
+    .set_thumbnail(url="{{ thumbnail.url }}")
+    {% endif %}
+    {% for field in fields -%}
+    {% if field.name or field.value %}
+    .add_field({{ params(
+        [
+            { name: "name", value: field.name },
+            { name: "value", value: field.value },
+            { name: "inline", value: ('True' if field.inline else 'False'), no_quotes: true }
+        ]
+    ) }})
+    {% endif %}
+    {% endfor %}
